--- a/Audio Visualizer/AudioKit-3.5/Examples/macOS/MicrophoneAnalysis/MicrophoneAnalysis/Base.lproj/Main.storyboard
+++ b/Audio Visualizer/AudioKit-3.5/Examples/macOS/MicrophoneAnalysis/MicrophoneAnalysis/Base.lproj/Main.storyboard
@@ -655,8 +655,10 @@
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="1280" height="720"/>
+                        <rect key="contentRect" x="0.0" y="0.0" width="1280" height="720"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minFullScreenContentSize" type="size" width="1280" height="720"/>
+                        <value key="maxFullScreenContentSize" type="size" width="1280" height="720"/>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -671,11 +673,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="MicrophoneAnalysis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1280" height="720"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="V5N-ci-jrX">
-                                <rect key="frame" x="-2" y="240" width="484" height="30"/>
+                                <rect key="frame" x="-2" y="690" width="1284" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="cfR-iP-ivh"/>
                                 </constraints>
